Refactor deprecated APIs across navigation, bundles, extras, and themes
- Migrate bottom navigation tab transitions to ActivityOptionsCompat.makeCustomAnimation across BudgetsActivity, AccountsActivity, ChartsActivity, and ReportsPlaceholderActivity (replaces deprecated overridePendingTransition).
- Migrate Bundle and Intent deserialization to AndroidX IntentCompat and BundleCompat (getSerializableExtra and getSerializable) across accounts, budgets, filters, splits, and repeating transaction activities (replaces deprecated single-argument methods).
- Migrate HTML formatting in AccountsActivity to HtmlCompat.fromHtml (replaces deprecated Html.fromHtml).
- Replace deprecated Class.newInstance() in PocketMoneySyncClass with getDeclaredConstructor().newInstance().
- Convert switch statements in PocketMoneyThemes to Java 14+ enhanced switch syntax.